# Federated-Learning-with-Transformer

./: README.md  client.py  pyproject.toml  run_simulation.py  server.py  task.py
data/WUSTL-IIoT/: comm_WUSTL-IIoT.pkl  dos_WUSTL-IIoT.pkl  recon_WUSTL-IIoT.pkl  train_WUSTL-IIoT.pkl
exported_models/: final_transformer_model.pth
utils/: attention.py  layers.py  loading.py  saving.py  split_dataset.py  transformer.py
wustl_transformer_flower.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
