[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wustl_transformer_flower"
version = "1.0.0"
description = "Federated learning with custom Transformer on WUSTL-IIoT dataset"
authors = [{ name = "Darpan Maurya", email = "darpanmaurya2003@gmial.com" }]
dependencies = [
    "flwr[simulation]>=1.19.0",
    "torch>=2.0.0",
    "numpy",
    "tqdm",
    "scikit-learn",
]

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.flwr.app]
publisher = "Darpan.maurya"

[tool.flwr.app.components]
serverapp = "server:app"
clientapp = "client:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 1.0
fraction-evaluate = 1.0

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 4

[tool.flwr.simulation.client-resources]
num-cpus = 2
num-gpus = 0
